--- a/CSS/mundo_munecas/index.html
+++ b/CSS/mundo_munecas/index.html
@@ -36,6 +36,57 @@
             <img id="carrito-1" src="assets/img/carrito-1.png" alt="">
         </article>
     </nav>
+    <main>
+        <section class="vendidas">
+            <p id="precio">157 Muñecas, orden: Precio</p>
+            <select name="" id="">
+                <option value="precio_alto">Precio más alto</option>
+                <option value="precio_bajo">Precio más bajo</option>
+                <option value="relevantes">Relevantes</option>
+            </select>
+        </section>
+        <section class="cards">
+            <div class="card">
+                <img src="assets/img/mexicana.jpg" alt="">
+                <p>Muñeca mexicana</p>
+                <div class="carrito-mas">
+                    <img src="assets/img/carrito-2.png" alt="">
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/img/china.jpg" alt="">
+                <p>Muñeca china</p>
+                <div class="carrito-mas">
+                    <img src="assets/img/carrito-2.png" alt="">
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/africana.jpg" alt="">
+                <p>Muñeca africana</p>
+                <div class="carrito-mas">
+                    <img src="assets/img/carrito-2.png" alt="">
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/holandesa.jpg" alt="">
+                <p>Muñeca holandesa</p>
+                <div class="carrito-mas">
+                    <img src="assets/img/carrito-2.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <section id="muneca-footer">
+            <img id="imagen-muneca-footer" src="/assets/img/logo.png" alt="">
+        </section>
+        <section class="images">
+            <img src="/assets/img/info.png" alt="">
+            <img src="/assets/img/email.png" alt="">
+            <img src="/assets/img/telefono-2.png" alt="">
+            <img src="/assets/img/preguntas.png" alt="">
+        </section>
+    </footer>
 </body>
 
 </html>
