ADD js onclick core

--- a/JS/primer-core/index.html
+++ b/JS/primer-core/index.html
@@ -12,7 +12,7 @@
         <div class="header-content">
             <span class="logo">Social Blog</span>
             <input type="text" class="search" placeholder="Buscar publicaciones...">
-            <button class="login-btn">Iniciar sesión</button>
+            <button id="login-button" class="login-btn">Iniciar sesión</button>
         </div>
     </header>
     <main>
@@ -40,10 +40,12 @@
             <div class="welcome-card">
                 <h3>¡Bienvenido!</h3>
                 <p>Explora nuevas publicaciones y conecta con otros usuarios.</p>
-                <button class="profile-btn">Ver perfil</button>
+                <button id="profile-button" class="profile-btn">Ver perfil</button>
             </div>
         </aside>
     </main>
 </body>
+
+<script src="script.js" defer></script>
 
 </html>
